src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C414_C414.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - list
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 13
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - list
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 14
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - tuple
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 14
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - tuple
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 15
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - set
      - set
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 11
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - set
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 12
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - set
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 13
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - sorted
      - set
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 14
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - reversed
      - set
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 16
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - sorted
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 15
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - sorted
  location:
    row: 12
    column: 0
  end_location:
    row: 12
    column: 16
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - sorted
      - sorted
  location:
    row: 13
    column: 0
  end_location:
    row: 13
    column: 17
  fix: ~
  parent: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - reversed
      - sorted
  location:
    row: 14
    column: 0
  end_location:
    row: 14
    column: 19
  fix: ~
  parent: ~

