src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C415_C415.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessarySubscriptReversal: set
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 18
  fix: ~
  parent: ~
- kind:
    UnnecessarySubscriptReversal: reversed
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 23
  fix: ~
  parent: ~
- kind:
    UnnecessarySubscriptReversal: sorted
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 21
  fix: ~
  parent: ~
- kind:
    UnnecessarySubscriptReversal: sorted
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 35
  fix: ~
  parent: ~

