src/flake8_comprehensions/snapshots/ruff__flake8_comprehensions__tests__C416_C416.py.snap
---
source: src/flake8_comprehensions/mod.rs
expression: checks
---
- kind:
    UnnecessaryComprehension: list
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 14
  fix:
    patch:
      content: list(x)
      location:
        row: 2
        column: 0
      end_location:
        row: 2
        column: 14
- kind:
    UnnecessaryComprehension: set
  location:
    row: 3
    column: 0
  end_location:
    row: 3
    column: 14
  fix:
    patch:
      content: set(x)
      location:
        row: 3
        column: 0
      end_location:
        row: 3
        column: 14

